# hospitrl

./: Dockerfile  README.md  client.py  deploy.py  environment.py  fix.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  scenario_config.json  validate.sh
graders/: easy.py  hard.py  medium.py
hospitrl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
my_env_v4/: logic.py  models.py
server/: app.py  environment.py  models.py
