[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hospitrl"
version = "0.1.0"
description = "AI-driven Hospital Ward Staff Management System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "pydantic",
    "openai",
    "huggingface_hub"
]

[project.scripts]
hospitrl-server = "server.app:main"

[tool.setuptools]
packages = ["my_env_v4", "server"]