[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build-meta"

[project]
name = "hospitrl"
version = "1.0.0"
description = "Hospital Resource Allocation Environment"
dependencies = [
 "fastapi>=0.104.0",
"uvicorn>=0.24.0",
"requests>=2.31.0",
"pydantic>=2.0.0",
"openai>=1.0.0",
"huggingface_hub>=0.20.0",
"openenv>=0.1.0",
"openenv-core>=0.2.0",
"gymnasium>=0.29.0",
"pandas>=2.0.0",
"gradio>=4.0.0",
"jinja2>=3.1.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server", "my_env_v4"]